tests/ui/lang-items/issue-86238.stderr
error: failed to find an overloaded call trait for closure call
  --> $DIR/issue-86238.rs:9:5
   |
LL |     one()
   |     ^^^^^
   |
   = help: make sure the `fn`/`fn_mut`/`fn_once` lang items are defined and have correctly defined `call`/`call_mut`/`call_once` methods

error: aborting due to previous error

